# ferrous-sysmet

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  browser-sync.config.js  dev-sysmet-http.sh  package.json  rust-toolchain.toml
.cargo/: config.toml
.scripts/: build-on-ramdisk.sh  dev-dependencies.sh  remove-ramdisk.sh  snapshot-n-times.sh
lib/env/: Cargo.toml
lib/log/: Cargo.toml
lib/metrics/: Cargo.toml
lib/metrics/src/: database.rs  errors.rs  snapshot.rs  thresholds.rs
services/env/: Cargo.toml
services/env/src/: lib.rs
services/log/: Cargo.toml
services/log/src/: layers.rs  lib.rs
services/metrics/: Cargo.toml
services/metrics/src/: database.rs  errors.rs  lib.rs  psutil.rs  snapshot.rs  thresholds.rs
xtask/: Cargo.toml
xtask/src/: main.rs
