[package]
name = "log"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-honeycomb = "0.4"
libhoney-rust = "0.1"
tracing-tree = "0.3"
either = "1.7"