[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { path = "../log" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
psutil = { version = "3.2", features = ["serde"] }
thiserror = "1.0"
rmp-serde = "1.1"
semver = "1.0"
